--- a/index.html
+++ b/index.html
@@ -4,17 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>hello</h1>
     <img src="images.jfif" alt="">
-    <ul>
-        <li>dir</li>
-        <li>cd</li>
-        <li>mkdir</li>
-        <li>rmdir</li>
-        <li>color</li>
-        <li>cls</li>
+    <h1>Today I studied such console commands:</h1>
+    <div>
+       <ul>
+            <li>dir</li>
+            <li>cd</li>
+            <li>mkdir</li>
+            <li>rmdir</li>
+            <li>color</li>
+            <li>cls</li>
+        </ul> 
+    </div>
+    
+    <h1>And such git console commands:</h1>
+    <div>
+        <ul>
+        <li>git add</li>
+        <li>git commit</li>
+        <li>git push</li>
     </ul>
+    </div>
+    
 </body>
 </html>
